# lootly

./: .env.example  .env.template  .gitignore  Dockerfile  README.md  claude_desktop_config.json  docker-compose.yml  go  oath.txt  payment_policy.json  pyproject.toml  scopes.txt  works  works2
docs/: api-limitations.md  api-reference.md  developer-guide.md  docker-deployment.md  getting-started.md  mcp-integration.md  prompt-examples.md  usage-examples.md
prps/: claude-input-conversion-system.md  ebay-rest-migration.md  ebay.rest.api.md  fulfillment_policy_api_tool_api.md  more_tool_apis.md  new_tool_apis.md  prp_ebay_error_handling_framework_v1.md  prp_ebay_policy_inventory_apis_v1.md
scripts/: README.md  create_listing_no_policies.py  decode.url.py  docker-run.sh  get_token.py  test_oauth_flow.py  test_oauth_status.py  test_results.json
src/: __version__.py  config.py  data_types.py  logging_config.py  lootly_server.py  main.py
src/api/: cache.py  category_cache.py  ebay_client.py  ebay_enums.py  errors.py  inline_policies.py  models.py  oauth.py  rest_client.py  sandbox_retry.py
src/api/tests/: test_api_integration.py  test_ebay_client.py  test_ebay_enums.py  test_inline_policies_unit.py  test_oauth_enhanced.py  test_oauth_integration.py
src/models/: __init__.py  common.py  enums.py  marketplace.py
src/prompts/: deal_finder.py  listing_optimizer.py  market_researcher.py  search_assistant.py
src/prompts/tests/: test_prompts_imports.py  test_prompts_unit.py
src/resources/: categories.py  market_guidance.py  policies.py  policy_templates.py  shipping.py  trends.py
src/resources/tests/: test_resources_simple.py
src/tools/: account_api.py  account_privileges_api.py  account_programs_api.py  browse_api.py  catalog_api.py  finding_api.py  fulfillment_policy_api.py  inventory_api.py  inventory_item_api.py  marketing_api.py  marketplace_insights_api.py  merchandising_api.py  oauth_consent.py  payment_policy_api.py  return_policy_api.py  shipping_api.py  shopping_api.py  taxonomy_api.py  trading_api.py  trending_api.py
src/tools/tests/: README.md  __init__.py  base_test.py  conftest.py  example_test_commands.md  test_data.py  (+35 more)
src/utils/: __init__.py  claude_input_converter.py  input_converter.py
(+13 files in other folders)
